FIX Ensure buttons spacing and restore the confirmation tick for SS3

--- a/client/src/containers/Login.scss
+++ b/client/src/containers/Login.scss
@@ -4,4 +4,8 @@
   list-style: none;
   margin: 0;
   padding: 0;
+
+  &__item + &__item {
+    margin-left: $button-spacing;
+  }
 }
